--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate": "ts-node -r tsconfig-paths/register src/scripts/migrate-artworks.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "lucide-react": "^0.468.0",
     "mongoose": "^8.9.2",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
