--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
+    "resend": "^4.0.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
